--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -1,28 +1,38 @@
-<div class="stage">
-    <div class="name">Stage</div>
-    <div class="title">Axxes</div>
-    <div class="text">
-        <p>The development of a new feature in the internal application.</p>
-        <p>Axxes is an IT consultancy company that is extremely committed to the job satisfaction of their employees. That is why I and two other interns have been given the task of creating a personalized year-in-review for each employee. On this year-in-review, the employees can then see what they had done in the past year. Among other things, the various projects and events are shown here in a fun and new way.</p>
+<div class="ngForProject">
+    <div class="project">
+        <div class="intro">
+            <div class="pic"><img src="assets/images/Axxes.jpg" alt="assets/images/Axxes.jpg"></div>
+            <div class="what">
+                <div class="name">Stage - Axxes</div>
+                <div class="functions">
+                    <div>React-Native Front-end developer</div>
+                    <div>Python developer</div>
+                </div>
+            </div>
+        </div>
+        <div class="text all">
+            <p>De ontwikkeling van een nieuwe feature voor de interne applicatie van Axxes.</p>
+            <p>Axxes is een IT consultancy bedrijf dat zeer hard inzet op de jobtevredenheid van zijn werknemers. Daarom heeft Axxes mij, samen met 2 andere stagaires, de taak gegeven om voor elke werknemer een gepersonalisseerde 'year-in-review' te maken. In dit jaaroverzicht kan de werknemer dan zien wat zij het voorbije jaar gedaan hebben. Hier worden dan ook zijn projecten kort toegelicht en een aantal foto's getoond van de verschillende evenementen waar deze persoon heen is geweest.</p>
+            <p>Voor Axxes was het daarnaast ook super belangrijk dat dit niet iets eenmalig was en dat dit dus automatisch elk jaar gegenereerd kan worden. Wij hebben dan uiteindelijk een python script geschreven dat dit kan bereiken.</p>
+        </div>
+        <ul class="tasks">
+            <li>Spotify wrapped achtig jaaroverzicht voor elke individuele werknemer</li>
+            <li>Automatisch genereren van gepersonalisseerde videos</li>
+        </ul>
+        <ul class="skills">
+            <li>React Native</li>
+            <li>HTML/SASS/JS</li>
+            <li>Python</li>
+            <li>Azure DevOps</li>
+            <li>TypeScript/JavaScript</li>
+            <li>Docker</li>
+            <li>Presenteren</li>
+            <li>Teamwerk</li>
+        </ul>
+        <ul class="documents">
+            <li>Realisaties: <a href="../download">Download</a></li>
+            <li>Verslagen: <a href="../download">Download</a></li>
+            <li>Reflectie: <a href="../download">Download</a></li>
+        </ul>
     </div>
-    <ul class="tasks">
-        <li>Automatically generate personal videos</li>
-        <li>Spotify wrapped like year-in-review presentaion for employees</li>
-    </ul>
-    <ul class="skills">
-        <li>React native</li>
-        <li>HTML/SASS/JS</li>
-        <li>Python</li>
-        <li>Azure DevOps</li>
-        <li>TypeScript/JavaScript</li>
-        <li>Docker</li>
-        <li>Presenting/Public speaking</li>
-        <li>Teamwork</li>
-    </ul>
-    <ul class="documents">
-        <li>Plan van aanpak: <a href="../download">Download</a></li>
-        <li>Realisaties: <a href="../download">Download</a></li>
-        <li>Verslagen: <a href="../download">Download</a></li>
-        <li>Reflectie: <a href="../download">Download</a></li>
-    </ul>
 </div>
