--- a/src/app/stage/stage.component.scss
+++ b/src/app/stage/stage.component.scss
@@ -1,30 +1,62 @@
-.stage{
-    background-color: #036;
-    padding: 10px;
-    margin-bottom: 50px;
-    >*{
-        margin-bottom: 10px;
-    }
+.ngForProject {
+    padding: 15px;
+    margin-bottom: 10px;
     *{
         color: white !important;
     }
-    .name{
-        font-size: 20px;
-    }
-    .title{
-        font-size: 32px;
-        margin-bottom: 25px;
-    }
-    .text{
-        p{
+    .project{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .intro{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            .pic{
+                img{
+                    border-radius: 50rem;
+                    width: 200px;
+                    height: 200px;
+                    background-color: white;
+                }
+            }
+            .what{
+                min-width: 300px;
+                .name{
+                    font-size: 32px;
+                }
+                .functions{
+                    font-style: italic;
+                }
+            }
+
+        }
+        .text{
             margin-bottom: 10px;
+            p{
+                margin-top: 10px;
+            }
+            .more, .less{
+                text-decoration: underline;
+                cursor: pointer;
+            }
+        }
+        .tasks{
+            margin-left: 1.2rem;
+            list-style: circle;
+        }
+        .documents{
+            margin-left: 1.2rem;
+            list-style: square;
         }
     }
-    .documents{
-        margin-left: 1.2rem;
-        font-weight: bold;
-        a{
-            font-weight: 200;
-        }
+    &:nth-child(3n - 1){
+        background-color: rgb(124, 19, 19);
+    }
+    &:nth-child(3n){
+        background-color: rgb(11, 97, 77);
+    }
+    &:nth-child(3n + 1){
+        background-color: rgb(0, 104, 173);
     }
 }
