--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,9 +6,9 @@
         <p>In mijn laatste jaren van het middelbaar heb ik Toegepaste Informatica gevolgd in het Sint Victor te Turnhout. Hier ben ik volledig verliefd geworden op programmeren en het bouwen van (web)applicaties. Na het middelbaar ben ik dan ook op zoek gegaan naar een school die een brede basis aan informatica gerelateerde vakken aanbood. In mijn zoektoch ben ik dan al vrij snel op de richting IT Factory gekomen binnen Thomas More Geel. Binnen IT Factory moeten de studenten telkens op het einde van het jaar een keuze maken over wat ze het volgend jaar wilden doen. Zo werd de opleiding IT Factory dan gesplitst in 5 afstudeertrajecten.</p>
     </div>
     <div class="socials">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-solid fa-code-branch"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
+        <a href="https://www.facebook.com/jonas1wouters/"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://github.com/jonas1wouters"><i class="fa-solid fa-code-branch"></i></a>
+        <a href="https://twitter.com/jonas1wouters"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/jonas1wouters/"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
 </div>
