--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -30,9 +30,9 @@
             <li>Teamwerk</li>
         </ul>
         <ul class="documents">
-            <li>Realisaties: <a href="../download">Download</a></li>
-            <li>Verslagen: <a href="../download">Download</a></li>
-            <li>Reflectie: <a href="../download">Download</a></li>
+            <li>Realisaties: <a href="assets/documents/JonasWouters_StageAxxes_Realisatie.pdf" download>Download</a></li>
+            <li>Verslagen: <a href="assets/documents/JonasWouters_StageAxxes_Weekverslag.pdf" download>Download</a></li>
+            <!-- <li>Reflectie: <a href="assets/documents/JonasWouters_StageAxxes_">Download</a></li> -->
         </ul>
     </div>
 </div>
