--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -34,6 +34,11 @@
             }
             .text{
                 margin-bottom: 10px;
+                .images{
+                  display: flex;
+                  flex-wrap: wrap;
+                  justify-content: space-between;
+                }
                 p{
                     margin-top: 10px;
                 }
