--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -19,6 +19,7 @@
             <li>Spotify wrapped achtig jaaroverzicht voor elke individuele werknemer</li>
             <li>Automatisch genereren van gepersonalisseerde videos</li>
         </ul>
+        <app-image-carrousel [images]="imagesStage"></app-image-carrousel>
         <ul class="skills">
             <li>React Native</li>
             <li>HTML/SASS/JS</li>
@@ -30,9 +31,10 @@
             <li>Teamwerk</li>
         </ul>
         <ul class="documents">
-            <li>Realisaties: <a href="assets/documents/JonasWouters_StageAxxes_Realisatie.pdf" download>Download</a></li>
-            <li>Verslagen: <a href="assets/documents/JonasWouters_StageAxxes_Weekverslag.pdf" download>Download</a></li>
-            <!-- <li>Reflectie: <a href="assets/documents/JonasWouters_StageAxxes_">Download</a></li> -->
+            <li><a href="assets/documents/JonasWouters_StageAxxes_PlanVanAanpak.pdf" target="_blank">Plan van aanpak</a>: <a href="assets/documents/JonasWouters_StageAxxes_PlanVanAanpak.pdf" download><i class="fa-solid fa-download"></i></a></li>
+            <li><a href="assets/documents/JonasWouters_StageAxxes_Realisatie.pdf" target="_blank">Realisaties</a>: <a href="assets/documents/JonasWouters_StageAxxes_Realisatie.pdf" download><i class="fa-solid fa-download"></i></a></li>
+            <li><a href="assets/documents/JonasWouters_StageAxxes_Weekverslag.pdf" target="_blank">Verslagen</a>: <a href="assets/documents/JonasWouters_StageAxxes_Weekverslag.pdf" download><i class="fa-solid fa-download"></i></a></li>
+            <li><a href="assets/documents/JonasWouters_StageAxxes_Reflectie.pdf" target="_blank">Reflectie</a>: <a href="assets/documents/JonasWouters_StageAxxes_Reflectie.pdf" download><i class="fa-solid fa-download"></i></a></li>
         </ul>
     </div>
 </div>
