--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -15,14 +15,17 @@
     .socials{
         display: flex;
         gap: 5px;
-        i{
-            width: 25px;
-            height: 25px;
-            border-radius: 50rem;
-            background-color: #e03a3b77;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        a{
+          text-decoration: none;
+          i{
+              width: 25px;
+              height: 25px;
+              border-radius: 50rem;
+              background-color: #e03a3b77;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+          }
         }
     }
 }
