--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,9 @@
+<div class="name">Over mij</div>
 <div class="aboutMe">
-    <div class="name">Over mij</div>
-    <div class="picture"></div>
+  <div class="photo">
+    <img src="assets/images/foto.jpg" alt="Foto">
+  </div>
+  <div class="content">
     <div class="text">
         <p>Mijn naam is Jonas Wouters, ik ben {{age}} jaar en ben geboren en getogen in Vosselaar. </p>
         <p>In mijn laatste jaren van het middelbaar heb ik Toegepaste Informatica gevolgd in het Sint Victor te Turnhout. Hier ben ik volledig verliefd geworden op programmeren en het bouwen van (web)applicaties. Na het middelbaar ben ik dan ook op zoek gegaan naar een school die een brede basis aan informatica gerelateerde vakken aanbood. In mijn zoektoch ben ik dan al vrij snel op de richting IT Factory gekomen binnen Thomas More Geel. Binnen IT Factory moeten de studenten telkens op het einde van het jaar een keuze maken over wat ze het volgend jaar wilden doen. Zo werd de opleiding IT Factory dan gesplitst in 5 afstudeertrajecten.</p>
@@ -12,4 +15,5 @@
         <a target="_blank" href="https://twitter.com/jonas1wouters"><i class="fa-brands fa-twitter"></i></a>
         <a target="_blank" href="https://www.linkedin.com/in/jonas1wouters/"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
+  </div>
 </div>
